--- a/express/package.json
+++ b/express/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "tsx --watch server.ts"
   },
   "author": "Gianluigi Trontini",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "express": "^4.18.2",
     "md5": "^2.3.0",
     "nodemon": "^2.0.22",
-    "sqlite3": "^5.1.6"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6",
+    "tsx": "^4.19.2"
   }
 }
